# wars

./: .gitignore  .gitmodules  Cargo.toml  LAUNCH.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: pair.py  send.py  webapp_integration.py
src/: lib.rs
wars/: __init__.py
